--- a/Sera.TaggedUnion.Analyzers/Sera.TaggedUnion.Analyzers.csproj
+++ b/Sera.TaggedUnion.Analyzers/Sera.TaggedUnion.Analyzers.csproj
@@ -7,6 +7,7 @@
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <IsRoslynComponent>true</IsRoslynComponent>
+        <Version>0.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
