--- a/Sera.Union.Utilities/Sera.Union.Utilities.csproj
+++ b/Sera.Union.Utilities/Sera.Union.Utilities.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
         <LangVersion>12.0</LangVersion>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <AssemblyName>Sera.Union</AssemblyName>
-        <RootNamespace>Sera.TaggedUnion</RootNamespace>
+        <AssemblyName>Sera.Union.Utilities</AssemblyName>
+        <RootNamespace>Sera.TaggedUnion.Utilities</RootNamespace>
         <Version>0.5.0</Version>
         <Description>Tagged union for c#</Description>
         <PackageProjectUrl>https://github.com/sera-net/Sera.Union</PackageProjectUrl>
@@ -21,13 +21,17 @@
         <ProjectReference Include="..\Sera.TaggedUnion.Analyzers\Sera.TaggedUnion.Analyzers.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer">
             <PrivateAssets>all</PrivateAssets>
         </ProjectReference>
+        <ProjectReference Include="..\Sera.TaggedUnion\Sera.TaggedUnion.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="..\LICENSE" Pack="true" PackagePath="\"/>
-        <None Include="..\README.md" Pack="true" PackagePath="\"/>
-        <None Include="..\Sera.TaggedUnion.Analyzers\bin\Release\netstandard2.0\Sera.TaggedUnion.Analyzers.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
-        <None Include="..\Sera.TaggedUnion.Analyzers\bin\Release\netstandard2.0\zh-Hans\Sera.TaggedUnion.Analyzers.resources.dll" Pack="true" PackagePath="analyzers/dotnet/cs/zh-Hans" Visible="false"/>
+        <None Include="..\LICENSE" Pack="true" PackagePath="\" />
+        <None Include="..\README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
+      <PackageReference Include="System.Text.Json" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
