--- a/Sera.Union.Utilities/Sera.Union.Utilities.csproj
+++ b/Sera.Union.Utilities/Sera.Union.Utilities.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net7.0;netstandard2.0;netstandard2.1;net6.0;net8.0</TargetFrameworks>
         <LangVersion>12.0</LangVersion>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <AssemblyName>Sera.Union.Utilities</AssemblyName>
         <RootNamespace>Sera.TaggedUnion.Utilities</RootNamespace>
-        <Version>0.5.0</Version>
+        <Version>0.5.1</Version>
         <Description>Tagged union for c#</Description>
         <PackageProjectUrl>https://github.com/sera-net/Sera.Union</PackageProjectUrl>
         <RepositoryUrl>https://github.com/sera-net/Sera.Union</RepositoryUrl>
